# cookiecutter-python-flask-app

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  wsgi.py
{{ cookiecutter.project_name }}/.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
{{ cookiecutter.project_name }}/.github/workflows/: ci.yml  test.yml
{{ cookiecutter.project_name }}/tests/: conftest.py  test_app.py  test_config.py  test_email.py  test_utils.py
{{ cookiecutter.project_name }}/tests/auth/: __init__.py  test_email.py  test_forms.py  test_views.py
{{ cookiecutter.project_name }}/tests/models/: __init__.py  test_mixins.py  test_user.py
{{ cookiecutter.project_name }}/tests/public/: __init__.py  test_views.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/: app.py  config.py  email.py  extensions.py  utils.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/auth/: __init__.py  email.py  forms.py  views.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/auth/templates/auth/: _forms.html  authenticate.html  login.html  password-reset-request.html  password-reset.html  register.html  two-factor-setup.html  two-factor.html
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/auth/templates/auth/email/: confirmation.html  confirmation.txt  reset_password.html  reset_password.txt
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/migrations/: __init__.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/models/: __init__.py  base.py  mixins.py  user.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/public/: __init__.py  views.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/static/: robots.txt
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/templates/: _nav.html  forbidden.html  index.html  internal_server_error.html  layout.html  not_found.html  unauthorized.html  user.html  users.html
